More user readability "set to default filters" shrink row size on total patyment , say BOOKING UNPAID table vehicle should be vehicle count switch rooms and dates in forms? created booking popup title says message, fix that

--- a/src/main/resources/Styles/editHistory.css
+++ b/src/main/resources/Styles/editHistory.css
@@ -82,7 +82,7 @@ Text{
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0.0em;
 } */
-.table-row-cell: even{
+.table-row-cell: odd{
     -fx-background-color: #e7f6ff;
 }
 
